--- a/html/accomodation.html
+++ b/html/accomodation.html
@@ -20,7 +20,7 @@
         <ul>
             <li><a href="index.html">Home</a> </li>
             <li><a href="#" class = "active">Accomodation</a> </li>
-            <li><a href="#">Places to visit</a> </li>
+            <li><a href="places.html">Activities</a> </li>
             <li><a href="covid.html">Covid-19</a> </li>
         </ul>
     </div>
