--- a/html/index.html
+++ b/html/index.html
@@ -20,7 +20,7 @@
         <ul>
             <li><a href="#" class ="active">Home</a> </li>
             <li><a href="accomodation.html">Accomodation</a> </li>
-            <li><a href="#">Places to visit</a> </li>
+            <li><a href="places.html">Activities</a> </li>
             <li><a href="covid.html">Covid-19</a> </li>
         </ul>
     </div>
